--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Car
 version=1.0
-author=Manuel Ulmer
-maintainer=Manuel
+author=AUTHORS
+maintainer=Manuel Ulmer
 sentence=This is a library to use the ELEGOO Smart Robot Car Kit.
 paragraph=You can use Funstions to drive and to read out Sensors.
 category=Device Control
