--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,7 @@
 name=Elegoo
-version=1.2v1..0
+version=1.0.0
 author=AUTHORS
+url=https://git.aerospace-lab.de/manuel.ulmer/ELEGOO-Smart-Robot-Car-Kit
 maintainer=Manuel Ulmer
 sentence=This is a library to use the ELEGOO Smart Robot Car Kit.
 paragraph=You can use Funstions to drive and to read out Sensors.
