--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Elegoo
-version=1.0.0
-author=AUTHORS
+version=1.1.0
+author=Manuel Ulmer
 url=https://git.aerospace-lab.de/manuel.ulmer/ELEGOO-Smart-Robot-Car-Kit
 maintainer=Manuel Ulmer
 sentence=This is a library to use the ELEGOO Smart Robot Car Kit.
-paragraph=You can use Funstions to drive and to read out Sensors.
+paragraph=You can use Functions to drive and to read out Sensors.
 category=Device Control
 architectures=*
 includes=Elegoo.h
